# backend-notes

./: README.md
basic-applications/fastapi-socket/: pyproject.toml
basic-applications/fastapi-socket/src/: main.py
basic-applications/multitenancy-project/: package.json  pnpm-lock.yaml
basic-applications/node-api-template/: package-lock.json  package.json
basic-applications/node-api-template/src/: app.js
basic-applications/socketio/: package-lock.json  package.json
basic-applications/socketio/src/: server.ts
projects/fastapi-socket/src/: utils.py
projects/socketapp/: package.json
system-design/: basic-architecture.excalidraw  roadmap-prime-mode.md
topics/: async.md
web-comunications/: rest-graphql.md  websocket.md
