[tool.poetry]
name = "fastapi-socket"
version = "0.1.0"
description = ""
authors = ["KauanIzidoro <cnttbussineskauan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.9.2"
taskipy = "^1.14.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pydantic-settings = "^2.7.1"

[tool.ruff]

[tool.ruff.lint]

[tool.taskipy.tasks]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
